--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
 
     <section id="hero">
         <div class="slideshow-container">
-            <div class="slideshow-image active" style="background-image: url('https://i.ibb.co/L67n8qZ/Bara-Semangat-28.png');"></div>
-            <div class="slideshow-image" style="background-image: url('https://i.ibb.co/tZ5M1d5/Simfoni-Persatuan.png');"></div>
-            <div class="slideshow-image" style="background-image: url('https://i.ibb.co/3Wk4J0r/Obor-Digital.png');"></div>
-            <div class="slideshow-image" style="background-image: url('https://i.ibb.co/wW4qG1F/Penjaga-Lingkungan.png');"></div>
-            <div class="slideshow-image" style="background-image: url('https://i.ibb.co/JzXyvXf/Harmoni-Nusantara.png');"></div>
+            <div class="slideshow-image active" style="background-image: url('https://imgur.com/LN1T3Gl');"></div>
+            <div class="slideshow-image" style="background-image: url('https://imgur.com/HqPJW1Y');"></div>
+            <div class="slideshow-image" style="background-image: url('https://imgur.com/2IIEr6g');"></div>
+            <div class="slideshow-image" style="background-image: url('https://imgur.com/owHstLU');"></div>
+            <div class="slideshow-image" style="background-image: url('https://imgur.com/Zgwm4kM');"></div>
         </div>
 
         <div class="hero-content">
