--- a/makna-visual.html
+++ b/makna-visual.html
@@ -256,7 +256,7 @@
     <section id="detail-makna">
         <div class="container">
             <div class="image-meaning-card">
-                <img src="https://i.ibb.co/L67n8qZ/Bara-Semangat-28.png" alt="Bara Semangat '28: Mengukir Masa Depan">
+                <img src="https://imgur.com/LN1T3Gl" alt="Bara Semangat '28: Mengukir Masa Depan">
                 <div class="text-content">
                     <h5>1. Bara Semangat '28: Mengukir Masa Depan</h5>
                     <p>Ilustrasi ini menggambarkan pemuda-pemudi yang bergerak maju, melambangkan **progresivitas dan semangat pantang menyerah** yang diwarisi dari Sumpah Pemuda 1928. Siluet Monas dengan cahaya keemasan menyimbolkan **harapan dan kejayaan masa depan Indonesia** yang dibangun oleh generasi muda. Garis-garis dinamis menunjukkan bahwa pergerakan ini terarah dan penuh energi.</p>
@@ -264,7 +264,7 @@
             </div>
 
             <div class="image-meaning-card reverse-layout">
-                <img src="https://i.ibb.co/tZ5M1d5/Simfoni-Persatuan.png" alt="Simfoni Persatuan: Ragam Pemuda, Satu Indonesia">
+                <img src="https://imgur.com/HqPJW1Y" alt="Simfoni Persatuan: Ragam Pemuda, Satu Indonesia">
                 <div class="text-content">
                     <h5>2. Simfoni Persatuan: Ragam Pemuda, Satu Indonesia</h5>
                     <p>Gambar ini merepresentasikan **keberagaman pemuda Indonesia yang bersatu dalam kolaborasi**. Berbagai latar belakang etnis yang saling bergandengan tangan membentuk harmoni, dengan logo Sumpah Pemuda 2025 sebagai pusat kekuatan. Ini adalah visualisasi dari **Bhineka Tunggal Ika** yang dipegang teguh oleh pemuda-pemudi di era modern.</p>
@@ -272,7 +272,7 @@
             </div>
 
             <div class="image-meaning-card">
-                <img src="https://i.ibb.co/3Wk4J0r/Obor-Digital.png" alt="Obor Digital: Menerangi Kemajuan Bangsa">
+                <img src="https://imgur.com/2IIEr6g" alt="Obor Digital: Menerangi Kemajuan Bangsa">
                 <div class="text-content">
                     <h5>3. Obor Digital: Menerangi Kemajuan Bangsa</h5>
                     <p>Ilustrasi ini menunjukkan **peran pemuda dalam memajukan bangsa melalui inovasi dan teknologi**. Obor digital melambangkan **semangat pencerahan dan pengetahuan** di era serba digital. Pemuda yang fokus di depan layar adalah agen perubahan yang memanfaatkan teknologi untuk menciptakan solusi dan kemajuan.</p>
@@ -280,7 +280,7 @@
             </div>
 
             <div class="image-meaning-card reverse-layout">
-                <img src="https://i.ibb.co/wW4qG1F/Penjaga-Lingkungan: Komitmen Pemuda untuk Bumi.png" alt="Penjaga Lingkungan: Komitmen Pemuda untuk Bumi">
+                <img src="https://imgur.com/owHstLU" alt="Penjaga Lingkungan: Komitmen Pemuda untuk Bumi">
                 <div class="text-content">
                     <h5>4. Penjaga Lingkungan: Komitmen Pemuda untuk Bumi</h5>
                     <p>Vektor ini menyoroti **komitmen pemuda terhadap keberlanjutan lingkungan**. Aksi menanam pohon dan membersihkan lingkungan adalah wujud nyata dari tanggung jawab sosial pemuda untuk menjaga "tanah Indonesia" demi masa depan yang lebih hijau. Simbol-simbol alam dan warna *eco-friendly* mempertegas pesan ini.</p>
@@ -288,7 +288,7 @@
             </div>
 
             <div class="image-meaning-card">
-                <img src="https://i.ibb.co/JzXyvXf/Harmoni-Nusantara.png" alt="Harmoni Nusantara: Festival Budaya Pemuda">
+                <img src="https://imgur.com/Zgwm4kM" alt="Harmoni Nusantara: Festival Budaya Pemuda">
                 <div class="text-content">
                     <h5>5. Harmoni Nusantara: Festival Budaya Pemuda</h5>
                     <p>Gambar ini merayakan **kekayaan seni dan budaya Indonesia yang diusung oleh pemuda**. Ekspresi tari dan musik tradisional yang modern melambangkan bagaimana pemuda melestarikan warisan budaya sambil berinovasi. Ini adalah visualisasi dari **persatuan dalam kebhinekaan budaya** yang terus hidup dan berkembang.</p>
