--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
 
     <section id="hero">
         <div class="slideshow-container">
-            <div class="slideshow-image active" style="background-image: url('https://imgur.com/LN1T3Gl');"></div>
-            <div class="slideshow-image" style="background-image: url('https://imgur.com/HqPJW1Y');"></div>
-            <div class="slideshow-image" style="background-image: url('https://imgur.com/2IIEr6g');"></div>
-            <div class="slideshow-image" style="background-image: url('https://imgur.com/owHstLU');"></div>
-            <div class="slideshow-image" style="background-image: url('https://imgur.com/Zgwm4kM');"></div>
+            <div class="slideshow-image active" style="background-image: url('https://i.imgur.com/LN1T3Gl.png');"></div>
+            <div class="slideshow-image" style="background-image: url('https://i.imgur.com/HqPJW1Y.png');"></div>
+            <div class="slideshow-image" style="background-image: url('https://i.imgur.com/2IIEr6g.png');"></div>
+            <div class="slideshow-image" style="background-image: url('https://i.imgur.com/owHstLU.png');"></div>
+            <div class="slideshow-image" style="background-image: url('https://i.imgur.com/Zgwm4kM.png');"></div>
         </div>
 
         <div class="hero-content">
