--- a/makna-visual.html
+++ b/makna-visual.html
@@ -119,7 +119,7 @@
             
             <div class="makna-card row align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0">
-                    <img src="URL_GAMBAR_LOGO_UTAMA" alt="Logo Sumpah Pemuda 2025" class="img-fluid">
+                    <img src="https://i.imgur.com/JKmSE2b.png" alt="Logo Sumpah Pemuda 2025" class="img-fluid">
                 </div>
                 <div class="col-lg-7">
                     <h5>Logo Utama: Energi Persatuan</h5>
@@ -133,7 +133,7 @@
 
             <div class="makna-card reverse-layout row align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0">
-                    <img src="URL_GAMBAR_TIPOGRAFI_TEMA" alt="Tipografi Tema 2025" class="img-fluid">
+                    <img src="https://i.imgur.com/cU6lRo4.png" alt="Tipografi Tema 2025" class="img-fluid">
                 </div>
                 <div class="col-lg-7">
                     <h5>Tipografi: Tegas dan Fleksibel</h5>
@@ -147,7 +147,7 @@
             
             <div class="makna-card row align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0">
-                    <img src="URL_GAMBAR_PALET_WARNA" alt="Palet Warna Resmi 2025" class="img-fluid">
+                    <img src="https://i.imgur.com/7w2DpnE.png" alt="Palet Warna Resmi 2025" class="img-fluid">
                 </div>
                 <div class="col-lg-7">
                     <h5>Palet Warna Resmi: Tradisi dan Digital</h5>
