--- a/galeri.html
+++ b/galeri.html
@@ -125,17 +125,17 @@
             <div class="gallery-grid">
                 
                 <div class="gallery-item" data-category="upacara">
-                    <img src="URL_GALERI_UPACARA_1" class="img-fluid" alt="Upacara Puncak HSP 2025">
+                    <img src="https://i.imgur.com/MmL1BMn.png" class="img-fluid" alt="Upacara Puncak HSP 2025">
                     <div class="overlay"><h5>Upacara Puncak HSP 2025</h5><p class="small">Stadion Utama Gelora Bung Karno, Jakarta</p></div>
                 </div>
 
                 <div class="gallery-item" data-category="rangkaian">
-                    <img src="URL_GALERI_RANGKAIAN_2" class="img-fluid" alt="Youth Tech Summit 2025">
+                    <img src="https://i.imgur.com/ItUH08x.png" class="img-fluid" alt="Youth Tech Summit 2025">
                     <div class="overlay"><h5>Youth Tech Summit</h5><p class="small">Rangkaian Acara (Oktober 2025)</p></div>
                 </div>
 
                 <div class="gallery-item" data-category="upacara">
-                    <img src="URL_GALERI_UPACARA_3" class="img-fluid" alt="Ikrar Sumpah Pemuda">
+                    <img src="https://i.imgur.com/fzKVTB9.png" class="img-fluid" alt="Ikrar Sumpah Pemuda">
                     <div class="overlay"><h5>Pembacaan Ikrar Sumpah Pemuda</h5><p class="small">Oleh perwakilan pemuda-pemudi berprestasi.</p></div>
                 </div>
                 
